Next release
------------

- Fix integer overflow errors on large buffers. Thanks to Marcin Kuzminski
  for the patch.  See: https://github.com/Pylons/waitress/issues/22

- Add support for listening on Unix domain sockets.

0.8.3 (2013-04-28)
------------------

Features
~~~~~~~~

- Add an ``asyncore_loop_timeout`` adjustment value, which controls the
  ``timeout`` value passed to ``asyncore.loop``; defaults to 1.

Bug Fixes
~~~~~~~~~

- The default asyncore loop timeout is now 1 second.  This prevents slow
  shutdown on Windows.  See https://github.com/Pylons/waitress/issues/6 .  This
  shouldn't matter to anyone in particular, but it can be changed via the
  ``asyncore_loop_timeout`` adjustment (it used to previously default to 30
  seconds).

- Don't complain if there's a response to a HEAD request that contains a
  Content-Length > 0.  See https://github.com/Pylons/waitress/pull/7.

- Fix bug in HTTP Expect/Continue support.  See
  https://github.com/Pylons/waitress/issues/9 .


0.8.2 (2012-11-14)
------------------

Bug Fixes
~~~~~~~~~

- http://corte.si/posts/code/pathod/pythonservers/index.html pointed out that
  sending a bad header resulted in an exception leading to a 500 response
  instead of the more proper 400 response without an exception.

- Fix a race condition in the test suite.

- Allow "ident" to be used as a keyword to ``serve()`` as per docs.

- Add py33 to tox.ini.

0.8.1 (2012-02-13)
------------------

Bug Fixes
~~~~~~~~~

- A brown-bag bug prevented request concurrency.  A slow request would block
  subsequent the responses of subsequent requests until the slow request's
  response was fully generated.  This was due to a "task lock" being declared
  as a class attribute rather than as an instance attribute on HTTPChannel.
  Also took the opportunity to move another lock named "outbuf lock" to the
  channel instance rather than the class.  See
  https://github.com/Pylons/waitress/pull/1 .

0.8 (2012-01-31)
----------------

Features
~~~~~~~~